package swees.scheduler;

import swees.taskset.Taskset;

public class RMScheduler {

    private Taskset taskset;

    public RMScheduler(Taskset taskset) {
        this.taskset = taskset;
    }

    public void schedule() {
        
    }

}