package swees.taskset;

import java.util.Set;

public class Taskset {

    private Set<Task> tasks;

    public Taskset(Set<Task> tasks) {
        this.tasks = tasks;
    }

}