@startuml Analisi
skinparam classAttributeIconSize 0

' classi
class Chunk {
    - executionTime: int
}

class Task {
    - period: int
    - chunks: List<Chunk>
    - deadline: int
}

class Taskset {
    - tasks: Set<Task>
}

class RMScheduler {
    - taskset: Taskset
}

' relazioni
Task "1...*" *-- "1...*" Chunk
Taskset "1...*" *-- "1...*" Task
RMScheduler "*" *-- "1" Taskset

@enduml